# tree-sitter-vhdl-test

./: .gitignore  README.md  pyproject.toml  run-test.sh  setup.sh  test.py  test.vhd
