[project]
name = "tree-sitter-vhdl-test"
version = "1.0.0"
description = "A test for tree-sitter-vhdl"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Dom Walters" },
]
dependencies = [
    "tree-sitter == 0.24.0",
    "tree-sitter-vhdl @ file:./tree-sitter-vhdl"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
